--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,8 +2,7 @@
   "name": "invoice-rename",
   "compatibility_date": "2024-12-04",
   "assets": {
-    "directory": "./dist",
-    "binding": "ASSETS"
+    "directory": "./dist"
   },
   "observability": {
     "enabled": true
